# confluence-mathjax

./: LICENSE  README.md
.github/workflows/: build.yml
mathjax/: pom.xml
mathjax-server/: Cargo.toml
mathjax-server/src/: main.rs
mathjax/src/main/java/com/globus/mathjax/admin/: AdminUI.java  UrlContextProvider.java
mathjax/src/main/java/com/globus/mathjax/helpers/: ComponentImports.java  Constants.java  PluginHelper.java
mathjax/src/main/java/com/globus/mathjax/macros/: MathJaxBlock.java  MathJaxInline.java
mathjax/src/main/java/com/globus/mathjax/rest/: RestAdminConfigService.java  RestResponse.java  RestService.java
mathjax/src/main/resources/: atlassian-plugin.xml
mathjax/src/main/resources/com/globus/mathjax/i18n/: macros.properties  mathjax.properties
mathjax/src/main/resources/com/globus/mathjax/templates/: admin.vm  foss.vm  help-footer.vm  help-header.vm  mathjax-help.vm  mathjax-inline.vm
mathjax/src/main/resources/js/: activate-string-fields.js  admin.js  latest.js  macro-help.js  mathjax.js
mathjax/src/main/resources/soy/: string-fields.soy
